EvLib pkg changes (likely will change again soon)